src/objects/depot__c.object
<CustomObject>
    <description>This object stores information about depots.</description>
    <fields>
        <fullName>depotKey__c</fullName>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>depotLocationDescription__c</fullName>
        <label>Location Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>depotProvider__c</fullName>
        <label>Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>depotStockedFor4HourEta__c</fullName>
        <label>Stocked for 4-Hour ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>depotStockedFor4Hour__c</fullName>
        <label>Stocked for 4-Hour</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Depot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>depotProvider__c</columns>
        <columns>depotStockedFor4Hour__c</columns>
        <columns>depotStockedFor4HourEta__c</columns>
        <columns>depotLocationDescription__c</columns>
        <columns>depotKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Depot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>depotName01</fullName>
        <active>true</active>
        <description>Show error message if user tries to rename a depot&apos;s name.  This is restricted because the name change doesn&apos;t cascade to the depotMap4Hour objects, which use the name as part of their key.</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>&quot;Depot Name&quot; cannot be changed because it&apos;s used in 4-hour map objects&apos; key field.  Create new depot with correct name/settings, modify all &quot;Depot Maps: 4-Hour&quot; using the existing depot to the new one, then you can delete this one.</errorMessage>
    </validationRules>
</CustomObject>